# pkg-zfs

./: .gitignore  ChangeLog  META  Makefile.am  Makefile.in  README.markdown  README.md  README.zfsutils  aclocal.m4  configure  configure.ac  cscope.out  index.html  spl_config.h.in  test  zfs-0.6.0-rc10.tar.gz.delta  zfs-0.6.0-rc10.tar.gz.id  zfs-0.6.0-rc11.tar.gz.delta  zfs-0.6.0-rc11.tar.gz.id  zfs-0.6.0-rc12.tar.gz.delta  zfs-0.6.0-rc12.tar.gz.id  zfs-0.6.0-rc13.tar.gz.delta  zfs-0.6.0-rc13.tar.gz.id  zfs-0.6.0-rc14.tar.gz.delta  zfs-0.6.0-rc14.tar.gz.id  zfs-0.6.0-rc5.tar.gz.delta  zfs-0.6.0-rc5.tar.gz.id  zfs-0.6.0-rc6.tar.gz.delta  zfs-0.6.0-rc6.tar.gz.id  zfs-0.6.0-rc7.tar.gz.delta  zfs-0.6.0-rc7.tar.gz.id  zfs-0.6.0-rc8.tar.gz.delta  zfs-0.6.0-rc8.tar.gz.id  zfs-0.6.0-rc9.tar.gz.delta  zfs-0.6.0-rc9.tar.gz.id  zfs-0.6.1.tar.gz.delta  zfs-0.6.1.tar.gz.id  zfs-0.6.3.tar.gz.delta  zfs-0.6.3.tar.gz.id  zfs-0.6.4.1.tar.gz.delta  (+10 more)
cmd/: Makefile.in
config/: .rpm.am.swp  .spl-build.m4.swp  Makefile.in  Rules.am  kernel-req-sync.m4  kernel.m4  rpm.am  spl-build.m4  user-libuuid.m4  user-zlib.m4  user.m4  zfs-build.m4
contrib/dracut/90zfs/: Makefile.am  module-setup.sh.in
debian/: .gitattributes  NEWS  README.Debian  README.Source  README.source  README.upgrade_from_0.6.2  changelog  control  control.in  control.modules.in  control.udeb.in  copyright  debuild-ppa.sh  dkms  docs  fix_includes-libspl.sh  gbp.conf  gbp.conf.in  libnvpair1.links  libuutil1.links  libzfs-dev.links  libzfs2.links  libzfs_SHLIB_MAJOR_-udeb.install.in  libzpool2.links  postinst  postrm  preinst  prerm  rules  spl-dkms.install  spl-dkms.lintian-overrides  spl-dkms.postinst  spl-dkms.prerm  spl-modules-_KVERS_-di.install.in  spl-modules-_KVERS_.dirs.in  spl-modules-_KVERS_.postinst.in  spl.install  spl.postinst  update_changelog.sh  watch  (+33 more)
doc/: Makefile.in
etc/: Makefile.am  Makefile.in
etc/init.d/: .gitignore  Makefile.am  README.md  common.init.in  zfs-import.in  zfs-mount.in  zfs-share.in  zfs-zed.in  zfs.in
include/: .spl-device.h.swp  Makefile.am  Makefile.in  libzfs.h  libzfs_impl.h  libzfs_mtab.h
initramfs/: Makefile.am
initramfs/hooks/: zfs
initramfs/scripts/: zfs
lib/: Makefile.in
man/: Makefile.in
module/: Makefile.in
scripts/: Makefile.am  Makefile.in  common.sh.in  (+1 more)
scripts/zfs-initramfs/: Makefile.am  default
scripts/zfs-initramfs/hooks/: zfs
scripts/zfs-initramfs/scripts/: zfs
(+310 files in other folders)
