pkgdracutdir = $(dracutdir)/modules.d/90zfs
pkgdracut_SCRIPTS = \
	export-zfs.sh \
	module-setup.sh \
	mount-zfs.sh \
	parse-zfs.sh

EXTRA_DIST = \
	export-zfs.sh.in \
	module-setup.sh.in \
	mount-zfs.sh.in \
	parse-zfs.sh.in

$(pkgdracut_SCRIPTS): $(EXTRA_DIST)
	-$(SED) -e 's,@bindir\@,$(bindir),g' \
		-e 's,@sbindir\@,$(sbindir),g' \
		-e 's,@udevdir\@,$(udevdir),g' \
		-e 's,@udevruledir\@,$(udevruledir),g' \
		-e 's,@sysconfdir\@,$(sysconfdir),g' \
		'$@.in' >'$@'

distclean-local::
	-$(RM) $(pkgdracut_SCRIPTS)
